# legal-search-streamlit

./: .gitattributes  .gitignore  README.md  packages.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
artefacts/: Global-Cases-Export-2023-08-18.csv  Global-Cases-Export-2023-11-20.csv  US-Case-Bundles-2023-11-20.csv  __init__.py  ascii-global-cases.csv  global-cases.csv
artefacts/chroma_index/: chroma.sqlite3
artefacts/chroma_index/bbeadbd1-d6de-463d-b78d-a7e37fdbab15/: index_metadata.pickle
artefacts/index/bbeadbd1-d6de-463d-b78d-a7e37fdbab15/: index_metadata.pickle
artefacts/whoosh_index/: MAIN_7nkta92iza1a4de8.seg  MAIN_wv6hgk3i19kaix5k.seg  _MAIN_1.toc
legalsearch/: __init__.py  app.py  build_index.py  data_preprocessing.py  filtering.py  indexing.py  load_index.py  models.py
legalsearch/artefacts/: __init__.py
