# https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "legalsearch"
version = "0.1.0"
description = "Legal Search"
authors = ["Clément Brutti-Mairesse <clement.brutti.mairesse@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://huggingface.co/spaces/ClementBM/legalsearch"
repository = "https://huggingface.co/spaces/ClementBM/legalsearch"
keywords = ["legal", "semantic search", "search engine"]
include = [
    "LICENSE",
]
packages = [
    { include = "legalsearch" },
    { include = "artefacts" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
streamlit = "^1.26.0"
torch = {url = "https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.0.1%2Bcpu.cxx11.abi-cp310-cp310-linux_x86_64.whl"}
langchain = "^0.0.281"
chromadb = "^0.4.8"
huggingface-hub = "^0.16.4"
sentence-transformers = "^2.2.2"

[tool.poetry.dev-dependencies]
pylint = "*"
pytest = "*"
mypy = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"